<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilterActivity">

    <RadioGroup
        android:id="@+id/radioFilterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioFilterPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_filter_popular"
            />

        <RadioButton
            android:id="@+id/radioFilterTopRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_filter_top_rated"
            />

        <RadioButton
            android:id="@+id/radioFilterFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_filter_favorite"
            />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/radioFilterGroup"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_popular" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_top_rated" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/btn_star_big_on" />
</android.support.constraint.ConstraintLayout>