<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_scroll_view">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_title"
                style="@style/DetailsLabel"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_details_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitStart"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:srcCompat="@android:drawable/presence_busy" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="192dp" />

            <TextView
                android:id="@+id/tv__details_release_date"
                style="@style/DetailsText"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_released_label"
                tools:text="Released Sept 2014" />

            <TextView
                android:id="@+id/tv_details_user_rating"
                style="@style/DetailsText"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_user_rating_label"
                tools:text="User rating ..." />

            <TextView
                android:id="@+id/tv_details_synopsis"
                style="@style/DetailsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_synosis_label" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="255dp" />

            <TextView
                android:id="@+id/tv_details_released_label"
                style="@style/DetailsLabel"
                android:text="@string/tv_details_label_release_text"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/iv_details_image" />

            <TextView
                android:id="@+id/tv_details_user_rating_label"
                style="@style/DetailsLabel"
                android:layout_marginStart="8dp"
                android:text="@string/tv_details_label_user_rating_text"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv__details_release_date" />

            <TextView
                android:id="@+id/tv_details_synosis_label"
                style="@style/DetailsLabel"
                android:layout_marginTop="8dp"
                android:text="@string/tv_details_label_synopsis_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <ImageView
                android:id="@+id/image_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/iv_details_image"
                app:layout_constraintTop_toTopOf="@id/iv_details_image"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer_images"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_details_user_rating"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_synopsis"></android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="@+id/rv_trailer_images"
                app:layout_constraintTop_toBottomOf="@id/rv_trailer_images" />

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Add Favorite"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_user_rating" />


        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>